Ensure right-hand stats text is right-aligned

--- a/core/sass/exportplan/_statistics.scss
+++ b/core/sass/exportplan/_statistics.scss
@@ -85,10 +85,9 @@
   }
 
   &--mobile-full {
-
     @include breakpoint(sm_lt) {
       dl {
-        display: block
+        display: block;
       }
       .statistic__figure {
         text-align: left;
@@ -102,6 +101,10 @@
   justify-content: space-between;
   position: relative;
   flex-flow: wrap;
+
+  & dl:last-of-type {
+    text-align: right;
+  }
 }
 
 .statistic__percentage {
